Fix 'No encoding specified in generated python files'.

FIXED-IN:2.18.1 (KDE Applications 15.12.1)
BUG:356949