umbrello/codegenerators/python/pythonwriter.cpp
@@ -24,6 +24,7 @@
 
 #include <QFile>
 #include <QRegExp>
+#include <QTextCodec>
 #include <QTextStream>
 
 static const char *reserved_words[] = {
@@ -219,6 +220,7 @@ void PythonWriter::writeClass(UMLClassifier *c)
         h<<str<<m_endl;
     }
 
+    h << "# coding=" << h.codec()->name() << m_endl;
     // generate import statement for superclasses and take packages into account
     str = cleanName(c->name());
     QString pkg = cleanName(c->package());
